<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/zwcolor">
    <com.example.nianxin.gongjuxiang.my.TitleLayout_about
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.example.nianxin.gongjuxiang.my.TitleLayout_about>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    android:layout_weight="0.25"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/appico" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="1"
        android:orientation="vertical"
        android:layout_weight="0.4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.2"
            android:background="@color/mibai"
            android:weightSum="1">
            <Button
                android:id="@+id/bt_gongneng"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:text="@string/gongnengjieshao"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginTop="0.5dp"
            android:layout_weight="0.2"
            android:background="@color/mibai"
            android:weightSum="1">
            <Button
                android:id="@+id/bt_shiyong"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:text="@string/shiyongxuzhi"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginTop="0.5dp"
            android:layout_weight="0.2"
            android:background="@color/mibai"
            android:weightSum="1">
            <Button
                android:id="@+id/bt_yijian"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:text="@string/yijianfankui"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginTop="0.5dp"
            android:layout_weight="0.2"
            android:background="@color/mibai"
            android:weightSum="1">
            <Button
                android:id="@+id/bt_meiriyitu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:text="@string/meiriyitu"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>